@@ -2,6 +2,7 @@ Revision history for Perl extension AnyEvent.
 
 3.51
 	- added (experimental) AnyEvent::DNS module.
+        - make on_eof optional in AnyEvent::Handle.
 	- support service names in tcp_connect and tcp_server.
         - work around netbsd/openbsd bug causing unix sockets not to
           become writable untill empty.
